# Django-healthcare

./: .gitignore  README.md  config.py  hello.py  pyproject.toml
healthcare_project/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
healthcare_project/doctors/: admin.py  models.py  serializers.py  urls.py  views.py
healthcare_project/healthcare_project/: settings.py  urls.py
healthcare_project/patient_doctor_mapping/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
healthcare_project/patients/: admin.py  models.py  serializers.py  urls.py  views.py
